// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate component > generate component with emits 1`] = `
"import { toHandlerKey as _toHandlerKey } from 'vue';
import { resolveComponent as _resolveComponent, createComponent as _createComponent } from 'vue/vapor';

export function render(_ctx) {
  const n0 = _createComponent(_resolveComponent("Comp"), [{
    onClick: () => (fn)
  }])
  const n1 = _createComponent(_resolveComponent("Comp"), [{
    [_toHandlerKey(eventName)]: () => (fn)
  }])
  return [n0, n1]
}"
`;

exports[`generate component > generate multi root component 1`] = `
"import { resolveComponent as _resolveComponent, createComponent as _createComponent, template as _template } from 'vue/vapor';
const t0 = _template("123")

export function render(_ctx) {
  const n1 = t0()
  const n0 = _createComponent(_resolveComponent("Comp"))
  return [n0, n1]
}"
`;

exports[`generate component > generate single root component (with props) 1`] = `
"import { resolveComponent as _resolveComponent, createComponent as _createComponent } from 'vue/vapor';

export function render(_ctx) {
  const n0 = _createComponent(_resolveComponent("Comp"), [{
    foo: () => (foo)
  }], true)
  return n0
}"
`;

exports[`generate component > generate single root component (without props) 1`] = `
"import { resolveComponent as _resolveComponent, createComponent as _createComponent } from 'vue/vapor';

export function render(_ctx) {
  const n0 = _createComponent(_resolveComponent("Comp"), null, true)
  return n0
}"
`;

exports[`generate component > should not generate withAttrs if component is not the root of the template 1`] = `
"import { resolveComponent as _resolveComponent, createComponent as _createComponent, insert as _insert, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n1 = t0()
  const n0 = _createComponent(_resolveComponent("Comp"))
  _insert(n0, n1)
  return n1
}"
`;
